2008-02-09  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-manager-ntlm.c: mark the DES magic number
	arrays const

	* libsoup/soup-date.c (months, days): add an extra "const" to each
	of these declarations, as one "const" is apparently not enough.
	(soup_date_to_time_t): remove redundant copy of days_before array.

	* libsoup/soup-dns.c (soup_dns_init): use g_once_init_enter/leave

	* libsoup/soup-gnutls.c (soup_ssl_supported)
	(soup_gnutls_channel_funcs): Mark these const
	(soup_gnutls_init, init_dh_params): Use g_once_init_enter/leave

	* libsoup/soup-status.c (reason_phrases): mark this const

	* tests/ssl-test.c: Remove the workaround for soup_gnutls_init()
	not being thread-safe, since it is now.

2008-02-08  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-headers.c (SoupMessageHeadersIter)
	(soup_message_headers_iter_init, soup_message_headers_iter_next):
	Add an iterator type for SoupMessageHeaders.

	* libsoup/soup-message-client-io.c (get_request_headers):
	* libsoup/soup-message-server-io.c (get_response_headers): Use
	SoupMessageHeadersIter.

	* libsoup/soup-logger.c (print_request, print_response): Use
	SoupMessageHeadersIter. And take advantage of the simplification
	to fix the kludge where 'direction' was stored as a field in
	SoupLoggerPrivate rather than being an argument to
	soup_logger_print.

	* tests/get.c (get_url):
	* tests/header-parsing.c (check_headers):
	* tests/simple-httpd.c (server_callback): Use
	SoupMessageHeadersIter

2008-02-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-server.c (soup_server_add_auth_domain): Ref the
	auth domain when adding it.

	* tests/continue-test.c (setup_server):
	* tests/server-auth-test.c (main): Add unrefs here to avoid
	leaking now

2008-02-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message.c (soup_message_set_chunk_allocator): New
	method that lets the application set a callback function to use to
	allocate SoupBuffers for reading into, so as to avoid needing
	extra copies.
